<resources>
    <string name="app_name">Tutor</string>
    <string name="user_type_tyutor">Tyutor</string>
    <string name="user_type_student">Student</string>
    <string name="auth_title">Autentifikatsiya</string>
    <string name="auth_subtitle">Akkauntingizga kirish uchun\nlogin va parollingizni kiriting</string>
    <string name="auth_login">Login</string>
    <string name="auth_password">Parol</string>
    <string name="auth_next">Davom etish</string>
    <string name="notification_messages">Xabarlar</string>
    <string name="profile_region">Viloyatingiz</string>
    <string name="profile_gender">Jinsingiz</string>
    <string name="profile_save">Saqlash</string>
    <string name="student_title">Hurmatli student,\ntoifangizni aniqlash\nuchunsorovnomadan\notishingiz kerak</string>
    <string name="question_finish">Tugatish</string>
    <string name="captured_image_send">Yuborish</string>
    <string name="finish_title">Aziz o’quvchi, siz\nsorovnomani muvaffaqiyat\nbilan tugatingiz, rahmat</string>
    <string name="finish_main">Bosh sahifa</string>
    <string name="student_start">Boshlash</string>
    <string name="student_next">Davom etish</string>
    <string name="student_finish">Bajarildi</string>
    <string name="tutor_statistic">Statistika</string>
    <string name="tutor_student_and_classes">Talabalar va ularning toifasi</string>
    <string name="students_and_grouos_courses">Guruhlar</string>
    <string name="students_students">Talabalar</string>
    <string name="report_dialog_title">Student rasmni qayta yuborishi uchun\npastagilardan bir nechtasini belgilashingiz mumkin:</string>
    <string name="qozonxona">Qozonxona</string>
    <string name="kavasi">Kavasi</string>
    <string name="gaz">Gaz</string>
    <string name="talabalar_va_ularning_toifasi">Talabalar va ularning toifasi</string>
    <string name="yashil_toifa">Yashil toifa</string>
    <string name="sariq_toifa">Sariq toifa</string>
    <string name="qizil_toifa">Qizil toifa</string>
    <string name="yangilari">Yangilari</string>
    <string name="parol_o_zgartirish">Parol o’zgartirish</string>
    <string name="tutor_change_password_title">Parol o\'zgartirish</string>
    <string name="tutor_change_password_subtitle">Parollingizni kiriting yangi parol\nyaratish uchun</string>
    <string name="tutor_change_password_parol">Parol</string>
    <string name="tutor_change_password_new_parol">Yangi parol</string>
    <string name="muvaffaqiyat">Muvaffaqiyat!</string>
    <string name="successfully_changed_password_subtitle">Siz yangi parol muvaffaqiyat\nbilan o’zgartirdingiz</string>
    <string name="kotyol">Kotyol</string>
</resources>