<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="16dp"
        android:text="@string/auth_title"
        android:textColor="@color/black_custom"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="16dp"
        android:text="@string/auth_subtitle"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/auth_input_background"
        android:hint="@string/auth_login"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="24dp"
        android:textColor="@color/black_custom"
        android:textColorHint="@color/gray"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints="password"
        android:background="@drawable/auth_input_background"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        android:paddingHorizontal="24dp"
        android:textColor="@color/black_custom"
        android:textColorHint="@color/gray"
        android:textSize="20sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_tutor_background"
        android:clickable="false"
        android:alpha=".7"
        android:focusable="false">

        <TextView
            android:id="@+id/tv_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/auth_next"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </FrameLayout>

</LinearLayout>