<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="16dp"
        android:text="@string/muvaffaqiyat"
        android:textColor="@color/black_custom"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:paddingHorizontal="16dp"
        android:text="@string/successfully_changed_password_subtitle"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_password_changed_successfully" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_tutor_background">

        <TextView
            android:id="@+id/tv_tutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/auth_next"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </FrameLayout>

</LinearLayout>